fast availability collision detection
